Fonte, imagem do botão e tamanho dos containers

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <!-- Adicione este botão após os contêineres de entrada e saída -->
         <div class="btn-container">
             <button id="invertBtn" onclick="invertCurrencies()">
-                <img src="images/Seta.jpeg" alt="Inverter">
+                <img src="images/Seta.png" alt="Inverter">
             </button>
         </div>
         <div class="output-container">
-            <input type="text" id="toAmountInput" class="input" readonly>
+            <input type="number" id="toAmountInput" class="input">
             <select id="toCurrencySelect" class="select">
                 <option value="USD" selected>USD</option>
             </select>
