--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conversor de Moedas</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <div class="imagem">
+      <img id="logo" src="images/logopng.png" alt="logo site" />
+    </div>
 
     <div class="container">
-        <div class="input-container">
-            <input type="number" id="fromAmountInput" placeholder="Digite um valor"class="input" step="0.01">
-            <select id="MoedaInSelect" class="select">
-                <option value="BRL" selected>BRL</option>
-            </select>
-        </div>
-        <div class="btn-container">
-            <button id="invertBtn" onclick="inverterMoedas()">
-                <img src="images/Seta.png" alt="Inverter">
-            </button>
-        </div>
-        <div class="output-container">
-            <input type="text" id="toAmountInput" class="input" readonly>
-            <select id="MoedaOutSelect" class="select">
-                <option value="USD" selected>USD</option>
-            </select>
-        </div>
+      <div class="input-container">
+        <input
+          type="number"
+          id="fromAmountInput"
+          placeholder="Digite um valor"
+          class="input"
+          step="0.01"
+        />
+        <select id="MoedaInSelect" class="select">
+          <option value="BRL" selected>BRL</option>
+        </select>
+      </div>
+      <div class="btn-container">
+        <button id="invertBtn" onclick="inverterMoedas()">
+          <img src="images/Seta.png" alt="Inverter" />
+        </button>
+      </div>
+      <div class="output-container">
+        <input type="text" id="toAmountInput" class="input" readonly />
+        <select id="MoedaOutSelect" class="select">
+          <option value="USD" selected>USD</option>
+        </select>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
